@@ -2,6 +2,7 @@ package com.venta.engine.model;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.joml.Vector3f;
@@ -19,7 +20,8 @@ public final class ObjectDTOTest {
                 new ObjectDTO.Vertex(new Vector3f(0, 1, 0), null, null, null)  // C
         );
 
-        triangle = new ObjectDTO("test", "triangle", vertices, List.of(new ObjectDTO.Facet(0, 1, 2)));
+        triangle = new ObjectDTO("test", "triangle", vertices, List.of(new ObjectDTO.Facet(0, 1, 2)),
+                Collections.emptyList());
     }
 
     @Test
@@ -41,22 +43,11 @@ public final class ObjectDTOTest {
                 new ObjectDTO.Vertex(new Vector3f(0, 1, 0), null, null, null)  // C
         );
 
-        final var triangle = new ObjectDTO("test", "triangle", vertices, List.of(new ObjectDTO.Facet(0, 1, 2)));
+        final var triangle = new ObjectDTO("test", "triangle", vertices, List.of(new ObjectDTO.Facet(0, 1, 2)), Collections.emptyList());
 
         final var faceNormals = triangle.getFaceNormals();
+        assertNotNull(faceNormals, "Face normal must exist");
         assertEquals(3, faceNormals.length, "Face normal should have 3 components");
         assertArrayEquals(new float[] { 0f, 0f, 1f }, faceNormals, 1e-6f, "Face normal must be (0, 0, 1)");
-
-        final var vertexNormals = triangle.computeVertexNormals();
-        assertEquals(3, vertexNormals.size(), "There should be 3 vertex normals");
-
-        for (int i = 0; i < 3; i++) {
-            final var normal = vertexNormals.get(i);
-
-            assertNotNull(normal, "Normal should not be null for vertex " + i);
-            assertEquals(0f, normal.x(), 1e-6f, "Normal[" + i + "].x must be correct");
-            assertEquals(0f, normal.y(), 1e-6f, "Normal[" + i + "].y must be correct");
-            assertEquals(1f, normal.z(), 1e-6f, "Normal[" + i + "].z must be correct");
-        }
     }
 }
